fix/classcastexceptions -introduces specialized hook interfaces for supported types -adds a fixture for hooks for tests -adds type safety measure for before hook call